Add a deployment stage to the pipeline

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -84,6 +84,6 @@ stages:
           - task: AzureWebApp@1
             displayName: 'Azure App Service Deploy: website'
             inputs:
-              azureSubscription: '$(SubscriptionId)'
+              azureSubscription: '7128c888-8a59-49b2-b389-70b739caadeb'
               appName: '$(WebAppName)'
               package: '$(Pipeline.Workspace)/drop/$(buildConfiguration)/*.zip'
